scss/global.scss
/* ... */
@font-face {
  font-family: "halcyon-medium";
  src: url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff2")
      format("woff2"),
    url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff")
      format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "halcyon-light";
  src: url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff2")
      format("woff2"),
    url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff")
      format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "halcyon-regularitalic";
  src: url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff2")
      format("woff2"),
    url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff")
      format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "halcyon-bold";
  src: url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff2")
      format("woff2"),
    url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff")
      format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "halcyon-black";
  src: url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff2")
      format("woff2"),
    url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff")
      format("woff");
  font-weight: normal;
  font-style: normal;
}

@mixin font-size($sizeValue: 1.6) {
  font-size: ($sizeValue * 10) + px;
  font-size: $sizeValue + rem;
}

html {
  font-size: 62.5%;
}

$headerFont: "Source Serif Pro", serif;
$bodyFont: "Source Serif Pro", serif;
$accentFont: "halcyon_regular", sans-serif;

$gusGreen: #339933;
$soil: #913029;
$wheat: #faf4ec;
$teaGreen: #d3e5a0;
$gusYellow: #f8dd8b;
$grey: #707070;
$white: #fff;
$black: #000;

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $headerFont;
  margin: 0;
  padding: 20px;
}
p {
  margin: 8px 0;
}

p,
a,
li {
  letter-spacing: 0.2rem;
  font-family: $bodyFont;
  font-size: 18px;
  line-height: 150%;
  color: black;
  font-weight: 400;
  padding: 20px;
  @include media-query-min($sm) {
    font-size: calc(16px + 2 * ((100vw - 320px) / 680));
  }
  @include media-query-min($md) {
    @include font-size(1.8);
    line-height: 32px;
  }
}

li {
  list-style: none;
  font-family: $bodyFont;
  font-size: 1.8rem;
  line-height: 150%;
}

.paragraph--bold {
  font-weight: 700;
}

h1,
.h1 {
  letter-spacing: 0.2rem;
  font-size: 3.6rem;
  font-weight: 900;
  line-height: 110%;
  color: $gusGreen;

  @include media-query-min($sm) {
    font-size: calc(36px + 40 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(7.6);
  }
}

h2,
.h2 {
  letter-spacing: 0.2rem;
  font-size: 5.8rem;
  line-height: 125%;
  color: white;
  font-weight: 900;

  @include media-query-min($sm) {
    font-size: calc(28px + 30 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(5.8);
  }
}

h3,
.h3 {
  letter-spacing: 0.2rem;
  color: $gusGreen;
  font-size: 5.2rem;
  font-weight: 900;
  line-height: 135%;

  @include media-query-min($sm) {
    font-size: calc(26px + 26 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(5.2);
    line-height: 36px;
  }
}

h4 {
  letter-spacing: 0.2rem;
  font-size: 2.8rem;
  line-height: 150%;
  color: $gusGreen;
  font-weight: 900;

  @include media-query-min($sm) {
    font-size: calc(28px + 20 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(4.8);
    line-height: 32px;
  }
}

h5 {
  font-size: 3.4rem;
  color: $soil;
  font-weight: 700;

  @include media-query-min($sm) {
    font-size: calc(18px + 16 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(3.4);
    line-height: 32px;
  }
}

h6 {
  font-family: $accentFont;
  font-size: 1.5rem;
  font-weight: 600;
  color: $soil;

  @include media-query-min($sm) {
    font-size: calc(14px + 1 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(1.5);
    line-height: 32px;
  }
}

h6.head--article-card {
  font-family: $headerFont;
  font-weight: 900;
  color: $gusGreen;
  font-size: 2.2rem;
}

p.body {
  font-family: $bodyFont;
  font-size: 2rem;
  line-height: 3.2rem;

  @include media-query-min($sm) {
    font-size: calc(17px + 3 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(2);
    line-height: 32px;
  }
}

p.deck--article-card {
  font-family: $accentFont;
  font-size: 1.6rem;
  line-height: 3.2rem;
  color: black;

  @include media-query-min($sm) {
    font-size: calc(14px + 2 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(1.6);
    line-height: 32px;
  }
}

p.deck {
  font-family: $accentFont;
  font-size: 2rem;
  line-height: 3.2rem;
  color: black;

  @include media-query-min($sm) {
    font-size: calc(16px + 4 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(2);
    line-height: 32px;
  }
}

p.deck--topic-feature {
  font-family: $accentFont;
  font-weight: 600;
  font-size: 2.6rem;
  line-height: 3.2rem;
  color: black;

  @include media-query-min($sm) {
    font-size: calc(17px + 9 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(2.6);
    line-height: 32px;
  }
}

p.byline {
  font-family: $headerFont;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 3.2rem;
  color: black;

  @include media-query-min($sm) {
    font-size: calc(12px + 4 * ((100vw - 320px) / 680));
  }

  @include media-query-min($md) {
    @include font-size(1.6);
    line-height: 32px;
  }
}
/* ... */

